@startuml

title __ITEMS's Class Diagram__\n

  namespace nz.ac.vuw.ecs.swen225.gp20.maze {
    namespace items {
      class nz.ac.vuw.ecs.swen225.gp20.maze.items.IcePotion {
          + equals()
          + getImage()
          + toString()
      }
    }
  }
  

  namespace nz.ac.vuw.ecs.swen225.gp20.maze {
    namespace items {
      abstract class nz.ac.vuw.ecs.swen225.gp20.maze.items.Item {
          - image : BufferedImage
          {abstract} + equals()
          {abstract} + getImage()
          {abstract} + toString()
          # getImageProxy()
      }
    }
  }
  

  namespace nz.ac.vuw.ecs.swen225.gp20.maze {
    namespace items {
      class nz.ac.vuw.ecs.swen225.gp20.maze.items.Key {
          - colour : String
          + Key()
          + equals()
          + getColour()
          + getImage()
          + hashCode()
          + toString()
      }
    }
  }
  

  namespace nz.ac.vuw.ecs.swen225.gp20.maze {
    namespace items {
      class nz.ac.vuw.ecs.swen225.gp20.maze.items.Treasure {
          {static} - random : Random
          + equals()
          + getImage()
          + toString()
      }
    }
  }
  

  namespace nz.ac.vuw.ecs.swen225.gp20.maze {
    namespace items {
      class nz.ac.vuw.ecs.swen225.gp20.maze.items.WaterPotion {
          + equals()
          + getImage()
          + toString()
      }
    }
  }
  

  nz.ac.vuw.ecs.swen225.gp20.maze.items.IcePotion -up-|> nz.ac.vuw.ecs.swen225.gp20.maze.items.Item
  nz.ac.vuw.ecs.swen225.gp20.maze.items.Key -up-|> nz.ac.vuw.ecs.swen225.gp20.maze.items.Item
  nz.ac.vuw.ecs.swen225.gp20.maze.items.Treasure -up-|> nz.ac.vuw.ecs.swen225.gp20.maze.items.Item
  nz.ac.vuw.ecs.swen225.gp20.maze.items.WaterPotion -up-|> nz.ac.vuw.ecs.swen225.gp20.maze.items.Item


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
